Complete company add

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,19 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-list-header>TaskML</ion-list-header>
+          <ion-note>Build your task</ion-note>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+          <ion-menu-toggle auto-hide="false"> <!-- *ngFor="let p of appPages; let i = index"> -->
+            <ion-item (click)="selectedIndex = 1" routerDirection="root" [routerLink]="companies" lines="none" detail="false" [class.selected]="selectedIndex == 1">
+              <!-- <ion-icon slot="start" [ios]="podium-outline" [md]="podium-outline"></ion-icon> -->
+              <ion-icon slot="start" name="podium-outline"></ion-icon>
+              <ion-label>Companies</ion-label>
+            </ion-item>
+            <!-- <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
+            </ion-item> -->
           </ion-menu-toggle>
         </ion-list>
 
@@ -20,6 +25,13 @@
           <ion-item *ngFor="let label of labels" lines="none">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
             <ion-label>{{ label }}</ion-label>
+          </ion-item>
+        </ion-list>
+        <ion-list id="labels-list">
+          <ion-list-header>Created By</ion-list-header>
+
+          <ion-item lines="none">
+            <ion-label>Biswajit Ganguly</ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
