--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,26 +7,27 @@
           <ion-note>Build your task</ion-note>
 
           <ion-menu-toggle auto-hide="false"> <!-- *ngFor="let p of appPages; let i = index"> -->
-            <ion-item (click)="selectedIndex = 1" routerDirection="root" [routerLink]="companies" lines="none" detail="false" [class.selected]="selectedIndex == 1">
+            <ion-item (click)="selectedIndex = 1" routerDirection="root" [routerLink]="['/', 'companies']" lines="full" detail="false" [class.selected]="selectedIndex == 1">
               <!-- <ion-icon slot="start" [ios]="podium-outline" [md]="podium-outline"></ion-icon> -->
               <ion-icon slot="start" name="podium-outline"></ion-icon>
               <ion-label>Companies</ion-label>
             </ion-item>
-            <!-- <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item> -->
+            <ion-item (click)="selectedIndex = 2" routerDirection="forward" [routerLink]="['/', 'tasks']"  lines="full" detail="false" [class.selected]="selectedIndex == 2">
+              <!-- <ion-icon slot="start" [ios]="podium-outline" [md]="podium-outline"></ion-icon> -->
+              <ion-icon slot="start" name="calender-outline"></ion-icon>
+              <ion-label>Tasks</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
 
-        <ion-list id="labels-list">
+        <!-- <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
 
           <ion-item *ngFor="let label of labels" lines="none">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
             <ion-label>{{ label }}</ion-label>
           </ion-item>
-        </ion-list>
+        </ion-list> -->
         <ion-list id="labels-list">
           <ion-list-header>Created By</ion-list-header>
 
